[project]
name = "neon-link"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pure-mls",
    "pydantic>=2.13.3",
    "uvicorn>=0.46.0",
]

[tool.uv.sources]
pure-mls = { path = "../pure-mls" }
