[project]
name = "neon-link"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "firebase-admin>=7.4.0",
    "httpx>=0.28.1",
    "neon-rings",
    "platformdirs>=4.2.0",
    "pure-mls>=3.0.5.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]

[tool.uv]
package = true

[tool.uv.sources]
neon-rings = { path = "../neon-rings", editable = true }


[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[project.scripts]
neon-link = "neon_link.cli:main"

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501", "W191"]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
